@@ -40,7 +40,6 @@
      - python-pymad (preferred; MAD MP3 decoder Python bindings)
      - python-eyed3 (alternative to pymad; eyeD3 Python bindings)
    * python-gpod (libgpod's Python bindings)
-   * python-id3 (OPTIONAL; if you want ID3v2 cover art extraction)
    * mplayer (OPTIONAL; if you want video podcast length detection)
 
  Additional dependencies for "Update tags after download":
